<resources>
    <string name="app_name">Journey Journal</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="firstName">Journey</string>
    <string name="show_Toolbar">ShowToolBar</string>
    <string name="show_Navigation">ShowNavigation</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
