<?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.journeyjournal.presentation.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >

        <argument
            android:name="@string/show_Toolbar"
            app:argType="boolean"
            android:defaultValue="false"
            />
        <argument
            android:name="@string/show_Navigation"
            app:argType="boolean"
            android:defaultValue="true"
            />
        <action
            android:id="@+id/action_navigation_home_to_addJourneyDetailFragment"
            app:destination="@id/addJourneyDetailFragment" />
        <action
            android:id="@+id/action_navigation_home_to_editJourneyFragment"
            app:destination="@id/editJourneyFragment" />
        <action
            android:id="@+id/action_navigation_home_to_viewEachJourneyFragment"
            app:destination="@id/viewEachJourneyFragment" />


    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.journeyjournal.presentation.ui.dashboard.DashboardFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_notifications_to_eachNotificationDetailFragment"
            app:destination="@id/eachNotificationDetailFragment" />
        <argument
            android:name="@string/show_Toolbar"
            app:argType="boolean"
            android:defaultValue="false"
            />
        <argument
            android:name="@string/show_Navigation"
            app:argType="boolean"
            android:defaultValue="true"
            />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.journeyjournal.presentation.ui.notifications.NotificationsFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_notifications" >
        <argument
            android:name="@string/show_Toolbar"
            app:argType="boolean"
            android:defaultValue="false"
            />
        <argument
            android:name="@string/show_Navigation"
            app:argType="boolean"
            android:defaultValue="true"
            />
        <action
            android:id="@+id/action_navigation_profile_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/eachNotificationDetailFragment"
        android:name="com.example.journeyjournal.presentation.EachNotificationDetailFragment"
        android:label="fragment_each_notification_detail"
        tools:layout="@layout/fragment_each_notification_detail" />
    <fragment
        android:id="@+id/addJourneyDetailFragment"
        android:name="com.example.journeyjournal.AddJourneyDetailFragment"
        android:label="fragment_add_journey_detail"
        tools:layout="@layout/fragment_add_journey_detail" >

        <action
            android:id="@+id/action_addJourneyDetailFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/editJourneyFragment"
        android:name="com.example.journeyjournal.EditJourneyFragment"
        android:label="fragment_edit_journey"
        tools:layout="@layout/fragment_edit_journey" >
        <action
            android:id="@+id/action_editJourneyFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/viewEachJourneyFragment"
        android:name="com.example.journeyjournal.ViewEachJourneyFragment"
        android:label="fragment_view_each_journey"
        tools:layout="@layout/fragment_view_each_journey" >
        <action
            android:id="@+id/action_viewEachJourneyFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>


</navigation>